--- a/README
+++ b/README
@@ -9,3 +9,5 @@ The garbage-name file being requested is a simple return-delimited file holding 
 It's a rubbish name you can change to something else so people who somehow have access to that directory can't guess your servernames (yes, it's a rubbish method)
 
 The auth.inc.php file can filter on ip or whatever.
+
+ps. also, I found the *other* updated version of this minutes after uploading the one I just spent over an hour one, after putting it off for months, not being able to find that other hypothetical version that I already fixed. That I now just found. But THIS one runs on PHP 7, and the other one doesn't. So there.
